Stop overflow none, attempt to fix keyboard bug

--- a/colour-adjust.css
+++ b/colour-adjust.css
@@ -1,7 +1,7 @@
 /* Global and canvas */
 html, body {
     margin: 0;
-    overscroll-behavior-y: none;
+    /* overscroll-behavior-y: none; */
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-size: 20px;
